infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giga-dagster-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "kv-cert-unitst"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: io-airflow-dev.unitst.org
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: dagster-dagster-webserver
                port:
                  number: 8088
